--- a/BarcodeScanner/ios/Podfile
+++ b/BarcodeScanner/ios/Podfile
@@ -8,6 +8,8 @@ target 'BarcodeScanner' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
   target 'BarcodeScannerTests' do
     inherit! :complete
     # Pods for testing
