--- a/BarcodeScanner/android/app/build.gradle
+++ b/BarcodeScanner/android/app/build.gradle
@@ -144,14 +144,24 @@ android {
             include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
         }
     }
-    signingConfigs {
-        debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
-        }
+
+  signingConfigs {
+        release {
+                storeFile file(MYAPP_RELEASE_STORE_FILE_NEW) 
+                storePassword MYAPP_RELEASE_STORE_PASSWORD 
+                keyAlias MYAPP_RELEASE_KEY_ALIAS 
+                keyPassword MYAPP_RELEASE_KEY_PASSWORD 
+                } 
     }
+
+    // signingConfigs {
+    //     debug {
+    //         storeFile file('debug.keystore')
+    //         storePassword 'android'
+    //         keyAlias 'androiddebugkey'
+    //         keyPassword 'android'
+    //     }
+    // }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
