--- a/BarcodeScanner/android/gradle.properties
+++ b/BarcodeScanner/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.37.0
+
+MYAPP_RELEASE_STORE_FILE_NEW=barcode.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=barcode@123
+MYAPP_RELEASE_KEY_PASSWORD=barcode@123
