--- a/BarcodeScanner/ios/BarcodeScanner/Info.plist
+++ b/BarcodeScanner/ios/BarcodeScanner/Info.plist
@@ -41,6 +41,8 @@
 	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSCameraUsageDescription</key>
+<string>BarcodeScanner use camera to scane barcodes</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
